--- a/filmes/todos-os-nomes.mdx
+++ b/filmes/todos-os-nomes.mdx
@@ -3,10 +3,10 @@ title: "Todos os Nomes"
 date: '2021-04-03'
 slug: "todos-os-nomes"
 sinopse: "Em meio à infinidade de nomes de todas as pessoas que existem e já existiram, o Sr. José, funcionário exemplar da Conservatória Geral de Registro Civil, apaixona-se por um nome específico — e inicia uma busca mirabolante para conhecer tudo sobre a vida da mulher dona daquele nome."
-paises: ["Brasil", "Portugal"]
+paises: ["Portugal"]
 generos: ["Drama"]
-cast: [["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"],["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"],["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"]]
-crew: [["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"]]
+cast: [["22462", "Sr. José"], ["1691901", "a vizinha"], ["544608", "o chefe"]]
+crew: [["2301233", "Direção"], ["2301233", "Roteiro"], ["10038", "Fotografia"], ["55613", "Figurino"]]
 poster: "https://seasonshowhome.files.wordpress.com/2021/04/exxpscpxeaeaxcc.jpeg?w=719"
 ---
 
