Commit quase Final

--- a/filmes/the-visit.mdx
+++ b/filmes/the-visit.mdx
@@ -1,13 +1,15 @@
 ---
 title: "The Visit"
-date: '2021-04-02'
+date: "02/04/2021"
 slug: "the-visit"
 sinopse: "Após anos distante, Claire retorna à sua cidade natal. Com sua chegada, ela propõe um acordo tentador: A cidade receberia uma bela quantia de dinheiro em troca da morte do homem que Claire sempre amou."
 paises: ["Dinamarca"]
 generos: ["Drama"]
-cast: [["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"]]
-crew: [["Daniel Craig", "Mark"], ["Júlia Stockler", "Maria Jussara"]]
+cast: [["2227", "Claire"], ["1019", "Alexander"]]
+crew: [["4453", "Direção"], ["4453", "Roteiro"], ["234892", "Fotografia"]]
 poster: "https://seasonshowhome.files.wordpress.com/2021/04/excs3cnxmaadwlp.jpeg?w=723"
+capa: "https://i.ibb.co/9p8Y3sb/The-Visit-1.png"
+banner: "https://i.ibb.co/fqz4YpT/The-Visit.png"
 ---
 
 <div id="estetica" class="conteudo">
